# zep

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  list.cmake  main.cpp
cmake/: g++.cmake
demo_imgui/: CMakeLists.txt  main.cpp
demo_qt/: CMakeLists.txt  mainwindow.h
extensions/: CMakeLists.txt
extensions/orca/: mode_orca.cpp  mode_orca.h  syntax_orca.cpp  syntax_orca.h
include/zep/imgui/: display_imgui.h  editor_imgui.h
include/zep/mcommon/string/: stringutils.h
m3rdparty/: list.cmake  m3rdparty.h
src/: CMakeLists.txt  buffer.cpp  buffer.h  commands.cpp  commands.h  display.cpp  display.h  display_imgui.cpp  display_imgui.h  editor.cpp  editor.h  list.cmake  mode.cpp  mode.h  mode_standard.cpp  mode_standard.h  mode_vim.cpp  mode_vim.h  syntax.cpp  syntax.h  syntax_glsl.cpp  syntax_glsl.h  theme.h  window.cpp  window.h
src/imgui/: display_imgui.cpp
src/mcommon/FileWatcher/: FileWatcher.cpp
src/tests/: buffer.test.cpp  mode_vim.test.cpp  stringutils.test.cpp
src/utils/: stringutils.h
